made little logo thing

--- a/Final Project/directoryHome.html
+++ b/Final Project/directoryHome.html
@@ -16,9 +16,20 @@ This simple directory is intended to help users find amateur repeaters in the st
 
 
 <form action="./search_stations.php" method="get">
-	Location: <input type="text" name="location" size="100"><br />
-	Station Type: <input type="text" name="station_type" size="100"><br />
-	<input type="submit" value="Search">
+    <table>
+        <tr> 
+            <td>Location:</td>
+            <td><input type="text" name="location" size="80"></td>
+        </tr>
+        <tr>
+            <td>Station Type:</td>
+            <td><input type="text" name="station_type" size="80"></td>
+        </tr>
+        <tr>    
+            <td><input type="submit" value="Search"></td>
+        </tr>
+        
+    </table>
 </form>
 
 </body>
