add weird logo to site

--- a/Final Project/directoryHome.html
+++ b/Final Project/directoryHome.html
@@ -32,5 +32,9 @@ This simple directory is intended to help users find amateur repeaters in the st
     </table>
 </form>
 
+<center>
+<img src="wave.png" alt="Two antenna schematic symbols connected by a sine wave" width="600" />
+</center>
+
 </body>
 </html>
